@startuml

class Prestamo {
  - hipoteca : float
  - excepcional : float
  - rating : int
  - expiry : Date
  - madurez : Date
  + Prestamo()
  + Prestamo()
  + Prestamo()
  + getCompromiso()
  + getPorcentajeNoUtilizado()
}

class SistemaAleman {
  + SistemaAleman()
  + capital()
  + duracion()
}

abstract class SistemaDeAmortizacion {
  + SistemaDeAmortizacion()
  {abstract} + capital()
  + duracion()
  # factorDeRiesgo()
}


class SistemaFrances {
  + SistemaFrances()
  + capital()
}

Prestamo o-- SistemaDeAmortizacion : estrategia
SistemaAleman -up-|> SistemaDeAmortizacion
SistemaDeAmortizacion o-- Prestamo : prestamo
SistemaFrances -up-|> SistemaDeAmortizacion


@enduml
